I did A LOT OF stuff but there is something wronggit add .! I will chekch it tomorrow

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "string_view": "cpp",
-        "*.glsl": "cpp"
+        "*.glsl": "cpp",
+        "cmath": "cpp"
     }
 }
