--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -17,6 +17,7 @@
                 "${fileDirname}/renderFunctions.cpp",
                 "${fileDirname}/Texture.cpp",
                 "${fileDirname}/Camera.cpp",
+                "${fileDirname}/Cube.cpp",
                 "-o",
                 "${fileDirname}/bin/${fileBasenameNoExtension}",
                 "-lGL",
@@ -72,6 +73,7 @@
                 "${fileDirname}/renderFunctions.cpp",
                 "${fileDirname}/Texture.cpp",
                 "${fileDirname}/Camera.cpp",
+                "${fileDirname}/Cube.cpp",
                 "-o",
                 "${fileDirname}/bin/${fileBasenameNoExtension}",
                 "-lGL",
